<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.example</groupId>
    <artifactId>mylang</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.google.errorprone</groupId>
            <artifactId>error_prone_annotations</artifactId>
            <version>2.50.0</version>
        </dependency>
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>1.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm</artifactId>
            <version>9.10.1</version>
        </dependency>
        <dependency>
            <groupId>info.picocli</groupId>
            <artifactId>picocli</artifactId>
            <version>4.7.7</version>
        </dependency>
        <dependency>
            <groupId>org.jline</groupId>
            <artifactId>jline</artifactId>
            <version>4.4.3</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>6.1.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-util</artifactId>
            <version>9.10.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Specify plugin versions instead of relying on maven default  -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>3.6.0</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- Maven Shade Plugin for creating an executable uber/fat JAR with dependencies -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <!-- Prevent the creation of a dependency-reduced POM -->
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>module-info.class</exclude>
                                        <exclude>META-INF/versions/**/module-info.class</exclude>
                                        <exclude>META-INF/MANIFEST.MF</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                            <transformers>
                                <!-- Include the main class in the manifest -->
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>mylang.Main</mainClass>
                                </transformer>
                                <!-- Include service provider configuration files -->
                                <transformer
                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Exclude some dependencies from versions-dependency-updates -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <!-- Exclude pre release versions -->
                    <ignoredVersions>(?i).*[.-](alpha|beta|rc|m)-?\d+</ignoredVersions>
                </configuration>
            </plugin>

            <!-- Enforce minimum java/maiden versions and other rules  -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.3</version>
                <dependencies>
                    <dependency>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>extra-enforcer-rules</artifactId>
                        <version>1.12.1</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>[21,)</version>
                                </requireJavaVersion>
                                <requireMavenVersion>
                                    <version>3.9.0</version>
                                </requireMavenVersion>
                                <banDuplicateClasses />
                                <dependencyConvergence />
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Format Java files -->
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>3.10.2</version>
                <configuration>
                    <upToDateChecking>
                        <enabled>false</enabled>
                    </upToDateChecking>
                    <java>
                        <includes>
                            <include>src/**/*.java</include>
                        </includes>
                        <eclipse>
                            <file>${project.basedir}/.vscode/eclipse-java-formatter.xml</file>
                        </eclipse>
                    </java>
                </configuration>
            </plugin>

            <!-- Run nullness validation for JSpecify @NullMarked code -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.16.0</version>
                <configuration>
                    <compilerArgs>
                        <!-- Use javac's simple compile policy, which Error Prone requires for
                        reliable analysis. -->
                        <arg>-XDcompilePolicy=simple</arg>
                        <!-- Treat all compiler warnings as errors so analysis findings fail the
                        build. -->
                        <arg>-Werror</arg>
                        <!-- Stop compilation after flow analysis once errors are found to avoid
                        later noisy phases. -->
                        <arg>--should-stop=ifError=FLOW</arg>
                        <!-- necessary only if building with JDK21:
                        https://github.com/google/error-prone/issues/5426 -->
                        <arg>-XDaddTypeAnnotationsToSymbol=true</arg>
                        <!-- Enable the Error Prone javac plugin. -->
                        <!-- Run NullAway as an Error Prone check and fail on any violations. -->
                        <!-- Limit NullAway checking to code annotated with JSpecify @NullMarked. -->
                        <!-- Interpret JSpecify annotations using NullAway's JSpecify mode. -->
                        <!-- Disable the StatementSwitchToExpressionSwitch rule -->
                        <arg>
                            -Xplugin:ErrorProne
                            -Xep:NullAway:ERROR
                            -Xep:MissingBraces:ERROR
                            -XepOpt:NullAway:OnlyNullMarked=true
                            -XepOpt:NullAway:JSpecifyMode=true
                            -Xep:StatementSwitchToExpressionSwitch:OFF
                        </arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.errorprone</groupId>
                            <artifactId>error_prone_core</artifactId>
                            <version>2.50.0</version>
                        </path>
                        <path>
                            <groupId>com.uber.nullaway</groupId>
                            <artifactId>nullaway</artifactId>
                            <version>0.13.4</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>

    </build>

</project>
